# qmint

./: README.md  pyproject.toml
docs/: Makefile  SECURITY.md  advanced.md  basics.md  community.md  conf.py  contributing.md  features.md  index.md  notebooks.md  requirements.txt
docs/_static/: custom.css
docs/advanced/: 1_nodeFormulation.ipynb  2_nonLinearRK.ipynb  3_nonLinearSDC.ipynb  4_phiIntegrator.ipynb
docs/basics/: 0_installation.md  1_qCoeffs.ipynb  2_rk.ipynb  3_qDelta.ipynb  4_sdc.ipynb  5_residuals.ipynb
docs/contrib/: addPhiIntegrator.md  testing.md
docs/features/: 1_lagrange.ipynb  2_nodes.ipynb
qmint/: __init__.py  utils.py
qmint/diffops/: __init__.py  odes.py
qmint/playgrounds/tibo/: imexStabilitySDC.py  lorenz.py  orthogonalPolynomials.py
qmint/steppers/: __init__.py  coeff.py  dahlquist.py
qmint/steppers/phi/: __init__.py  euler.py
qplay/tibo/: imexStabilityAdvDiffSDC.py  imexStabilityRK.py  stability.py
tests/: test_diffops.py
tests/test_steppers/: test_coeff.py  test_dahlquist.py  test_phi.py
